--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 8px;
 }
 
 li {
@@ -37,6 +38,9 @@ a {
 
 .container--sm {
   max-width: 1240px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .container--lg {
@@ -55,6 +59,7 @@ a {
 }
 
 .menu-list {
+  margin-left: 13%;
   display: flex;
   align-items: center;
   flex-flow: row wrap;
@@ -84,7 +89,6 @@ a {
   background-color: #fff;
   color: #333;
   border: 2px solid #f8f4f4;
-  border-radius: 8px;
 }
 
 .user-trial {
@@ -98,4 +102,56 @@ main {
   display: flex;
   margin-top: 16px;
   justify-content: center;
+}
+
+/* main-intro */
+.intro-hiringTogether {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hiring-intro {
+  max-width: 900px;
+  text-align: center;
+}
+
+.hiring-paragraph {
+  margin-top: 30px;
+  font-size: 26px;
+  line-height: 36px;
+  text-align: center;
+  color: #35393f;
+  max-width: 510px;
+}
+
+.hiring-form {
+  margin-top: 33px;
+  height: 54px;
+}
+
+#hiring-form-email {
+  margin: 0;
+  padding: 10px;
+  width: 300px;
+  height: 100%;
+  border: 2px solid #09f;
+  border-radius: 8px 0px 0px 8px;
+  color: #b2b2b2;
+  font-size: 20px;
+  line-height: 28px;
+}
+
+/* #hiring-form-email:focus {
+  border: 2px solid #aea;
+} */
+
+.hiring-form-submit {
+  margin-left: -7px; /* -4px */
+  display: inline-flex;
+  width: 165px; /* 162px*/
+  border: 2px solid #09f;
+  border-radius: 0px 8px 8px 0px;
+  font-size: 20px;
+  line-height: 28px;
 }
