--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,6 @@ body {
   color: #0e1016;
 }
 
-h2 {
-  font-weight: 400;
-  font-size: 120px;
-  line-height: 110px;
-  letter-spacing: 2px;
-  color: rgba(14, 16, 22, 0.95);
-}
-
 .btn {
   font-size: 18px;
   height: 100%;
@@ -62,6 +54,7 @@ a {
   margin-left: 13%;
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-flow: row wrap;
   gap: 26px;
   height: 100%;
@@ -104,6 +97,12 @@ main {
   justify-content: center;
 }
 
+.intro {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /* main-intro */
 .intro-hiringTogether {
   display: flex;
@@ -114,10 +113,15 @@ main {
 .hiring-intro {
   max-width: 900px;
   text-align: center;
+  font-weight: 400;
+  font-size: 120px;
+  line-height: 110px;
+  letter-spacing: 2px;
+  color: rgba(14, 16, 22, 0.95);
 }
 
 .hiring-paragraph {
-  margin-top: 30px;
+  margin-top: 70px;
   font-size: 26px;
   line-height: 36px;
   text-align: center;
@@ -142,16 +146,79 @@ main {
   line-height: 28px;
 }
 
-/* #hiring-form-email:focus {
-  border: 2px solid #aea;
-} */
+#hiring-form-email:focus {
+  border: 2px solid #f8f4f4;
+  outline: 0px;
+}
 
 .hiring-form-submit {
-  margin-left: -7px; /* -4px */
+  margin-left: -5px;
   display: inline-flex;
-  width: 165px; /* 162px*/
+  width: 163px;
   border: 2px solid #09f;
   border-radius: 0px 8px 8px 0px;
   font-size: 20px;
   line-height: 28px;
+}
+
+/* teams */
+.teams {
+  margin-top: 40px;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+}
+
+.teams-header {
+  font-size: 20px;
+  line-height: 28px;
+  color: #b2b2b2;
+}
+
+.teams-list {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+/* how works */
+.howWorks {
+  margin-top: 60px;
+  display: flex;
+  align-items: center;
+  flex-flow: column wrap;
+  min-height: 690px;
+}
+
+.howWorks-header {
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 56px;
+  letter-spacing: 1.5px;
+}
+
+.howWorks-player {
+  margin-top: 30px;
+  position: relative;
+  max-width: 860px;
+}
+
+.player-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 360px;
+  height: 70px;
+  background-color: #fff;
+  box-shadow: 0px 7px 10px rgba(186, 193, 197, 0.2);
+  border-radius: 40px;
+  position: absolute;
+  top: 451px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.btn-text {
+  margin-left: 15px;
+  color: #000;
 }
