--- a/css/styles.css
+++ b/css/styles.css
@@ -6,13 +6,15 @@ body {
 
 .btn {
   font-size: 18px;
-  height: 100%;
   color: #fff;
   background-color: #09f;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 15px 20px;
   border-radius: 8px;
+}
+
+h3 {
+  font-weight: 700;
+  font-size: 30px;
 }
 
 li {
@@ -37,6 +39,9 @@ a {
 
 .container--lg {
   max-width: 1360px;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
 }
 
 /* header */
@@ -85,19 +90,20 @@ a {
 }
 
 .user-trial {
-  width: 153px;
-  border-radius: 8px;
+  padding: 17px 20px;
   margin-left: 10px;
 }
 
 /* main */
 main {
   display: flex;
+  flex-flow: column wrap;
   margin-top: 16px;
-  justify-content: center;
+  align-items: center;
 }
 
 .intro {
+  padding-bottom: 110px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -132,6 +138,7 @@ main {
 .hiring-form {
   margin-top: 33px;
   height: 54px;
+  display: flex;
 }
 
 #hiring-form-email {
@@ -153,12 +160,10 @@ main {
 
 .hiring-form-submit {
   margin-left: -5px;
-  display: inline-flex;
-  width: 163px;
+  padding: 15px;
   border: 2px solid #09f;
   border-radius: 0px 8px 8px 0px;
   font-size: 20px;
-  line-height: 28px;
 }
 
 /* teams */
@@ -187,7 +192,7 @@ main {
   display: flex;
   align-items: center;
   flex-flow: column wrap;
-  min-height: 690px;
+  max-height: 690px;
 }
 
 .howWorks-header {
@@ -207,13 +212,12 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 360px;
-  height: 70px;
+  padding: 25px 30px;
   background-color: #fff;
   box-shadow: 0px 7px 10px rgba(186, 193, 197, 0.2);
   border-radius: 40px;
   position: absolute;
-  top: 451px;
+  top: calc(100% - 45px);
   left: 50%;
   transform: translateX(-50%);
 }
@@ -221,4 +225,74 @@ main {
 .btn-text {
   margin-left: 15px;
   color: #000;
+}
+
+/* main-content */
+.main-content {
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+}
+
+.benefits-container {
+  padding: 40px 0;
+  display: flex;
+  flex-flow: row wrap;
+  gap: 40px;
+  justify-content: space-between;
+  color: rgba(14, 16, 22, 0.95);
+}
+
+.container-content {
+  max-width: 444px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+}
+
+.benefits-create {
+  flex-flow: row-reverse wrap;
+}
+
+.content-benefits {
+  padding: 40px;
+  min-height: 1240px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.benefits-header {
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 64px;
+  letter-spacing: 1.5px;
+}
+
+.benefits-text {
+  font-size: 22px;
+  line-height: 31px;
+}
+
+.benefits-btn {
+  padding: 20px 17px;
+  font-weight: 700;
+  color: #333333;
+  background-color: #fff;
+  border: 2px solid #f8f4f4;
+}
+
+.img-signature {
+  margin-top: 10px;
+  font-size: 16px;
+  text-align: center;
+  color: rgba(14, 16, 22, 0.4);
+}
+
+.hire-title {
+  color: #0c9f64;
+}
+
+.create-title {
+  color: #fec104;
 }
